Bug 101790 - [I945GM][Regression] Cursor does not move
Summary: [I945GM][Regression] Cursor does not move
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: PatchMerged
Keywords: regression
Depends on:
Blocks:
 
Reported: 2017-07-14 14:46 UTC by Paul Menzel
Modified: 2017-07-28 14:31 UTC (History)
4 users (show)

See Also:
i915 platform: I945GM
i915 features: display/Other


Attachments
Linux messages (112.17 KB, text/plain)
2017-07-14 14:49 UTC, Paul Menzel
no flags Details

Description Paul Menzel 2017-07-14 14:46:02 UTC
On a Lenovo X60t (Intel 945GM), there is a regression in Linus’ master branch compared to the 4.12 release, that the mouse cursor in X does not (visually) move. It actually seems to move as can be seen how windows are activated, when the invisible mouse cursor hovers over them.

Switching to a virtual console, and back, the position of the cursor is updated.

Going back to Linux 4.12 fixes the issue.
Comment 1 Paul Menzel 2017-07-14 14:49:18 UTC
Created attachment 132688 [details]
Linux messages

By the way, there is nothing in the Linux messages, even with `drm.debug=0xe`, and in the X server log files.
Comment 2 Chris Wilson 2017-07-14 15:46:39 UTC
If you cat /sys/kernel/debug/dri/0/i915_display_info that should show the actual location of the hw cursor as well. Can you attach Xorg.0.log or equivalent?
Comment 3 Ville Syrjala 2017-07-14 15:59:19 UTC
Please test
https://patchwork.freedesktop.org/patch/167039/
Comment 4 Paul Menzel 2017-07-14 21:50:01 UTC
(In reply to Ville Syrjala from comment #3)
> Please test
> https://patchwork.freedesktop.org/patch/167039/

Thank you. That fixed it.

Tested-by: Paul Menzel <paulepanter@users.sourceforge.net>

Just a note regarding the test `kms_cursor_crc` in the Intel GPU tools.

```
IGT-Version: 1.19-g6e572cfc (i686) (Linux: 4.12.0+ i686)
Beginning cursor-size-change on pipe B, connector LVDS-1

cursor-size-change on pipe B, connector LVDS-1: PASSED

Subtest cursor-size-change: SUCCESS (2.052s)
Beginning cursor-64x64-onscreen on pipe B, connector LVDS-1
Stack trace:
  #0 [__igt_fail_assert+0x76]
  #1 [do_display_commit+0x9e4]
  #2 [<unknown>+0x9e4]
  #3 [<unknown>+0x9e4]
  #4 [<unknown>+0x9e4]
  #5 [<unknown>+0x9e4]
  #6 [<unknown>+0x9e4]
  #7 [<unknown>+0x9e4]
  #8 [<unknown>+0x9e4]
  #9 [<unknown>+0x9e4]
[goes on and on]
```

(On Linux 4.9.30 from Debian 9 (Stretch/stable) all tests were skipped though.)
Comment 5 Paul Menzel 2017-07-17 10:38:55 UTC
(In reply to Paul Menzel from comment #4)
> (In reply to Ville Syrjala from comment #3)
> > Please test
> > https://patchwork.freedesktop.org/patch/167039/
> 
> Thank you. That fixed it.
> 
> Tested-by: Paul Menzel <paulepanter@users.sourceforge.net>

There is still another issue, where pasting text with the middle mouse button doesn’t appear right away. I created bug #101819 for this.

> Just a note regarding the test `kms_cursor_crc` in the Intel GPU tools.
> 
> ```
> IGT-Version: 1.19-g6e572cfc (i686) (Linux: 4.12.0+ i686)
> Beginning cursor-size-change on pipe B, connector LVDS-1
> 
> cursor-size-change on pipe B, connector LVDS-1: PASSED
> 
> Subtest cursor-size-change: SUCCESS (2.052s)
> Beginning cursor-64x64-onscreen on pipe B, connector LVDS-1
> Stack trace:
>   #0 [__igt_fail_assert+0x76]
>   #1 [do_display_commit+0x9e4]
>   #2 [<unknown>+0x9e4]
>   #3 [<unknown>+0x9e4]
>   #4 [<unknown>+0x9e4]
>   #5 [<unknown>+0x9e4]
>   #6 [<unknown>+0x9e4]
>   #7 [<unknown>+0x9e4]
>   #8 [<unknown>+0x9e4]
>   #9 [<unknown>+0x9e4]
> [goes on and on]
> ```

I created bug #101817 [2] for this issue.

> (On Linux 4.9.30 from Debian 9 (Stretch/stable) all tests were skipped
> though.)


[1] https://bugs.freedesktop.org/show_bug.cgi?id=101819
[2] https://bugs.freedesktop.org/show_bug.cgi?id=101817
Comment 6 David H. Gutteridge 2017-07-19 04:46:00 UTC
I also encountered this issue (mouse pointer not moving) testing an old netbook with a 945GME with the drm-intel-nightly branch cloned the evening of July 7th. I applied the original patch supplied and it fixed the problem for me.
Comment 7 Paul Menzel 2017-07-19 09:40:41 UTC
(In reply to David H. Gutteridge from comment #6)
> I also encountered this issue (mouse pointer not moving) testing an old
> netbook with a 945GME with the drm-intel-nightly branch cloned the evening
> of July 7th. I applied the original patch supplied and it fixed the problem
> for me.

Thank you for the feedback. Daniel applied this patch already, so the final 4.13 release won’t have it.

David, do you also experience the paste issue, cf bug #101819?

[1] https://bugs.freedesktop.org/show_bug.cgi?id=101819
Comment 8 Paul Menzel 2017-07-19 15:56:25 UTC
Elizabeth please note, that the commit description [1] mentions, that it also does not work on PNV.

> Turns out that just writing CURPOS isn't sufficient to move the cursor
> on some platforms. My 830 works just fine, but eg. 945 and PNV don't.


[1] https://patchwork.freedesktop.org/patch/167039/
Comment 9 Elizabeth 2017-07-20 21:31:13 UTC
*** Bug 100725 has been marked as a duplicate of this bug. ***
Comment 10 Elizabeth 2017-07-20 21:35:27 UTC
*** Bug 100725 has been marked as a duplicate of this bug. ***
Comment 11 Ricardo 2017-07-28 14:31:14 UTC
Patch has been upstream in drm-tip... closing this bug as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.